# ginga-peer-to-peer

ginga-cpp/: ChangeLog  INSTALL  Makefile.am  README  autogen.sh  configure.in
ginga-cpp/src/: Makefile.am  main.cpp
gingacc-p2p/: AUTHORS  ChangeLog  INSTALL  LICENSING  Makefile.am  README  TODO  autogen.sh  configure.in  doxygenConfigFile
gingacc-p2p/doxygen/html/: ChatTask_8h.html  ChatTask_8h_source.html  FileShareClient_8cpp.html  FileShareClient_8h.html  FileShareClient_8h_source.html  IP2PEventListener_8h.html  IP2PEventListener_8h_source.html  IP2PManager_8h.html  IP2PManager_8h_source.html  P2PManager_8cpp.html  P2PManager_8h.html  P2PManager_8h_source.html  annotated.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1ChatTask-members.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1ChatTask.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1FileShareClient-members.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1FileShareClient.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1IP2PEventListener-members.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1IP2PEventListener.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1IP2PManager-members.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1IP2PManager.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1P2PManager-members.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1P2PManager.html  classes.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  hierarchy.html  index.html
gingacc-p2p/doxygen/latex/: ChatTask_8h.tex  FileShareClient_8cpp.tex  FileShareClient_8h.tex  IP2PEventListener_8h.tex  IP2PManager_8h.tex  P2PManager_8cpp.tex  P2PManager_8h.tex  annotated.tex  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1ChatTask.tex  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1FileShareClient.tex  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1IP2PEventListener.tex  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1IP2PManager.eps  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1IP2PManager.tex  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1P2PManager.eps  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1core_1_1p2p_1_1P2PManager.tex  doxygen.sty  files.tex  hierarchy.tex  refman.tex
gingacc-p2p/include/: ChatTask.h  FileShareClient.h  IP2PEventListener.h  IP2PManager.h  Makefile.am  P2PManager.h
gingacc-p2p/src/: ChatTask.cpp  FileShareClient.cpp  Makefile.am  P2PManager.cpp
libjingle/: Makefile.am  configure.ac
libjingle/talk/: Makefile.am
libjingle/talk/base/: Makefile.am
libjingle/talk/base/include/: Makefile.am
libjingle/talk/base/src/: Makefile.am  diskcachestd.cc  md5c.c  physicalsocketserver.cc  ssladapter.cc  winping.cc
libjingle/talk/examples/: Makefile.am
libjingle/talk/examples/call/: Makefile.am
libjingle/talk/examples/login/: Makefile.am
libjingle/talk/examples/pcp/: Makefile.am  pcp_main.cc  textsessionclient.h
libjingle/talk/examples/text/: Makefile.am  text_main.cc  textclient.cc  textclient.h  textsessionclient.cc  textsessionclient.h
libjingle/talk/p2p/: Makefile.am
libjingle/talk/p2p/base/: Makefile.am
libjingle/talk/p2p/client/: Makefile.am
libjingle/talk/session/fileshare/: Makefile.am
libjingle/talk/session/phone/: Makefile.am
libjingle/talk/session/tunnel/: Makefile.am
libjingle/talk/xmllite/: Makefile.am
libjingle/talk/xmpp/: Makefile.am
p2p-test-app/: Makefile.am  TODO  autogen.sh  configure.in  doxygenConfigFile
p2p-test-app/doxygen/html/: GraphicInterface_8cpp.html  GraphicInterface_8h.html  GraphicInterface_8h_source.html  GraphicList_8cpp.html  GraphicList_8h.html  GraphicList_8h_source.html  P2PTest_8cpp.html  P2PTest_8h.html  P2PTest_8h_source.html  annotated.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1p2ptest_1_1GraphicInterface-members.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1p2ptest_1_1GraphicInterface.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1p2ptest_1_1GraphicList-members.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1p2ptest_1_1GraphicList.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1p2ptest_1_1P2PTest-members.html  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1p2ptest_1_1P2PTest.html  classes.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  index.html
p2p-test-app/doxygen/latex/: GraphicInterface_8cpp.tex  GraphicInterface_8h.tex  GraphicList_8cpp.tex  GraphicList_8h.tex  P2PTest_8cpp.tex  P2PTest_8h.tex  annotated.tex  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1p2ptest_1_1GraphicInterface.tex  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1p2ptest_1_1GraphicList.tex  classbr_1_1usp_1_1icmc_1_1intermidia_1_1ginga_1_1p2ptest_1_1P2PTest.tex  doxygen.sty  files.tex  refman.tex
p2p-test-app/files/: Makefile.am  p2p.conf
p2p-test-app/include/: GraphicInterface.h  GraphicList.h  Makefile.am  P2PTest.h
p2p-test-app/src/: GraphicInterface.cpp  GraphicList.cpp  Makefile.am  P2PTest.cpp
