METASOURCES = AUTO
LIBS =
miscdir = /usr/local/etc/ginga/p2ptest
misc_DATA = p2p.conf fileshare.png # red.png green.png

# Origem dos botões: http://commons.wikimedia.org/wiki/Category:Round_icons
# Origem do icone de fileshare: http://www.veryicon.com/icon/preview/System/Kids%20Icons/File%20share%20Icon.jpg
