METASOURCES = AUTO
LIBS =

cricketbaseIncludedir = /usr/local/include/libjingle/talk/base

crickettestIncludedir = /usr/local/include/libjingle/talk/base

cricketbaseInclude_HEADERS =       asyncfile.h \
                            common.h \
			    convert.h \
                            asyncpacketsocket.h \
                            socketfactory.h \
                            asyncsocket.h \
                            socket.h \
                            asynctcpsocket.h \
                            linked_ptr.h \
                            asyncudpsocket.h \
                            logging.h \
                            socketserver.h \
                            base64.h \
                            md5.h \
                            stl_decl.h \
                            basicdefs.h \
                            messagequeue.h \
                            basictypes.h \
                            stringdigest.h \
                            stringencode.h \
                            stringutils.h \
                            bytebuffer.h \
                            task.h \
                            byteorder.h \
                            taskrunner.h \
                            criticalsection.h \
                            network.h \
                            thread.h \
                            time.h \
                            physicalsocketserver.h \
                            proxyinfo.h \
                            host.h \
                            scoped_ptr.h \
                            sigslot.h \
                            winping.h \
                            socketadapters.h \
                            socketaddress.h \
                            host.h \
                            socketaddresspair.h \
                            Equifax_Secure_Global_eBusiness_CA-1.h \
                            stream.h \
                            ssladapter.h \
                            openssladapter.h \
			    cryptstring.h \
			    httpbase.h \
			    httpclient.h \
                            httpcommon.h \
			    httpserver.h \
			    httpcommon-inl.h \
			    proxydetect.h \
			    helpers.h \
			    socketpool.h \
			    asynchttprequest.h \
			    signalthread.h \
			    firewallsocketserver.h \
			    diskcache.h \
     			    pathutils.h \
                            socketstream.h \
			    autodetectproxy.h \
			    urlencode.h \
			    fileutils.h \
			    unixfilesystem.h \
			    win32filesystem.h \
			    tarstream.h \
			    streamutils.h \
			    diskcachestd.h \
			    testclient.h \
			    natserver.h \
			    nattypes.h \
			    natsocketfactory.h \
			    virtualsocketserver.h \
			    event.h
crickettestInclude_HEADERS = $(cricketbaseInclude_HEADERS) 
AM_CXXFLAGS = -DPOSIX

#noinst_PROGRAMS = natserver nat_unittest virtualsocket_unittest
